[package]
name = "yarpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
cgmath = "0.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
fltk = "1.4.0"
threadpool = "1.8.1"
image = "0.24.6"
oidn = {git = "https://github.com/Twinklebear/oidn-rs.git"}
lerp = "0.4.0"
